Added savingsgoal,event endpoint and dashboard functionality